--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vendor/clj-html"]
 	path = Vendor/clj-html
 	url = git://github.com/mmcgrana/clj-html.git
+[submodule "Vendor/clj-doc"]
+	path = Vendor/clj-doc
+	url = git://github.com/mmcgrana/clj-doc.git
